test/kustomize/quick-start.yaml
apiVersion: apps/v1
kind: Deployment
***REMOVED***
  name: quick-start
***REMOVED***
    app.kubernetes.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quick-start
  template:
    ***REMOVED***
    ***REMOVED***
        app: quick-start
    spec:
      containers:
        - name: demo
          image: quay.io/mcombi/quarkus-getting-started:10eaa822d3c4a18a811a20f07c78a1d65757d619
          ports:
            - containerPort: 8080
              protocol: TCP
              name: tpc-port
