test/kustomize/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
***REMOVED***
  name: quick-start-route-test
spec:
  host: quick-start-service-demo.apps.cluster-hcgkt.hcgkt.sandbox352.opentlc.com
  to:
    kind: Service
    name: quick-start-service
    weight: 100
  port:
    targetPort: server
  wildcardPolicy: None
